sql model creaion and external data interation complelted

--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,9 @@ asyncpg = "*"
 databases = "*"
 psycopg2-binary = "*"
 kagglehub = "*"
+pydantic-settings = "*"
+greenlet = "*"
+alembic = "*"
 
 [dev-packages]
 black="*"
