api and factory

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,5 +4,29 @@ python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
+# Set environment variables for testing
+env =
+    ENVIRONMENT=test
+    DATABASE_URL=sqlite:///./test.db
+    API_BASE_URL=http://testserver/api
+    TEST_MODE=true
+
+# Configure asyncio
+asyncio_mode = strict
+asyncio_default_fixture_loop_scope = function
+
+# Configure markers
+markers =
+    integration: marks tests as integration tests (deselect with '-m "not integration"')
+    unit: marks tests as unit tests
+    api: marks tests as API tests
+    client: marks tests as client tests
+
+# Logging configuration
+log_cli = true
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+
 # Verbose output
 addopts = -v 
