adding schedule + timeline models + integration

--- a/alembic.ini
+++ b/alembic.ini
@@ -58,11 +58,14 @@ sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
-# post_write_hooks defines scripts or Python functions that are run
-# on newly generated revision scripts.  See the documentation for further
-# detail and examples
+# Existing configuration might look like:
+black = true
 
+# Fix by changing it to:
 hooks = black
+black.type = console_scripts
+black.entrypoint = black
+black.options = -l 88 REVISION_SCRIPT_FILENAME
 
 [post_write_hooks.black]
 type = console_scripts
