--- a/Pipfile
+++ b/Pipfile
@@ -20,7 +20,6 @@ google-cloud-storage = "*"
 python-dotenv = "*"
 jinja2 = "==3.1.2"
 openai = "*"
-python-telegram-bot = "*"
 beautifulsoup4 = "*"
 requests = "*"
 langchain = "*"
@@ -37,6 +36,9 @@ greenlet = "*"
 alembic = "*"
 pyjwt = "*"
 pytest = "*"
+python-telegram-bot = {version = "*", extras = ["job-queue"]}
+playwright = "*"
+plotly = "*"
 
 [dev-packages]
 black="*"
